# MacOS-Use

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  notebook.ipynb  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
macos_use/agent/: __init__.py  base.py  loop.py  service.py  views.py
macos_use/agent/context/: service.py
macos_use/agent/desktop/: __init__.py  config.py  service.py  views.py
macos_use/agent/events/: service.py  subscriber.py  views.py
macos_use/agent/prompt/: human.md  service.py  system.md
macos_use/agent/registry/: service.py
macos_use/agent/tools/: __init__.py  service.py  views.py
macos_use/agent/tree/: __init__.py  config.py  service.py  views.py
macos_use/agent/watchdog/: service.py
macos_use/ax/: __init__.py  controls.py  core.py  enums.py  events.py  patterns.py
macos_use/desktop/: __init__.py  service.py  views.py
macos_use/llms/: __init__.py  anthropic.py  azure_openai.py  base.py  cerebras.py  google.py  groq.py  litellm.py  mistral.py  ollama.py  open_router.py  openai.py  views.py
macos_use/messages/: __init__.py  service.py
macos_use/providers/: __init__.py  base.py  events.py
macos_use/providers/anthropic/: __init__.py  llm.py
macos_use/providers/azure_openai/: __init__.py  llm.py
macos_use/providers/cerebras/: __init__.py  llm.py
macos_use/providers/deepgram/: __init__.py  stt.py  tts.py
macos_use/providers/deepseek/: __init__.py  llm.py
macos_use/providers/elevenlabs/: __init__.py  stt.py  tts.py
macos_use/providers/google/: __init__.py  llm.py  stt.py  tts.py
macos_use/providers/groq/: __init__.py  llm.py  stt.py  tts.py
macos_use/providers/litellm/: __init__.py  llm.py
macos_use/providers/mistral/: __init__.py  llm.py
macos_use/providers/nvidia/: __init__.py  llm.py
macos_use/providers/ollama/: __init__.py  llm.py
macos_use/providers/open_router/: __init__.py  llm.py
macos_use/providers/openai/: __init__.py  llm.py  stt.py  tts.py
macos_use/providers/vllm/: __init__.py  llm.py
macos_use/telemetry/: service.py
macos_use/tool/: __init__.py
macos_use/tree/: __init__.py  config.py  service.py  views.py
macos_use/watchdog/: service.py
