[project]
name = "macos-use"
version = "0.1.0"
description = "Computer use agent for macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pyobjc-framework-Quartz>=10.1",
    "pyobjc-framework-Cocoa>=10.1",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "markdownify>=0.11.6",
    "rich>=13.7.0",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "google-generativeai>=0.4.0",
    "tabulate>=0.9.0",
    "groq>=0.29.0",
    "google-genai>=1.45.0",
    "openai>=1.93.0",
    "ollama>=0.5.1",
    "cerebras-cloud-sdk>=1.50.1",
    "anthropic>=0.68.1",
    "litellm>=1.72.0",
    "mistralai>=1.9.11",
]

[project.scripts]
macos-use = "macos_use.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
