[project]
name = "macos-use"
version = "0.1.1"
description = "Computer use agent for macOS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jeomon George" },
]
keywords = [
    "macos",
    "desktop-automation",
    "gui-automation",
    "ai-agent",
    "computer-use",
    "accessibility",
    "llm",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyautogui>=0.9.54",
    "pyobjc-framework-Quartz>=10.1",
    "pyobjc-framework-Cocoa>=10.1",
    "pyobjc-framework-ApplicationServices>=10.1",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "markdownify>=0.11.6",
    "rich>=13.7.0",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "google-generativeai>=0.4.0",
    "tabulate>=0.9.0",
    "groq>=0.29.0",
    "google-genai>=1.45.0",
    "openai>=1.93.0",
    "ollama>=0.5.1",
    "cerebras-cloud-sdk>=1.50.1",
    "anthropic>=0.68.1",
    "litellm>=1.72.0",
    "mistralai>=1.9.11",
    "python-dotenv>=1.2.1",
    "uuid7>=0.1.0",
    "posthog>=7.8.3",
    "ipykernel>=7.2.0",
    "pyobjc-core>=12.1",
    "pyobjc>=12.1",
]

[project.urls]
Homepage = "https://github.com/CursorTouch/MacOS-Use"
Repository = "https://github.com/CursorTouch/MacOS-Use"
Issues = "https://github.com/CursorTouch/MacOS-Use/issues"
Releases = "https://github.com/CursorTouch/MacOS-Use/releases"

[project.scripts]
macos-use = "macos_use.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
